# leptos-playground

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js  vercel.json
src/: app.rs  lib.rs  main.rs  tailwind_form.rs
style/: output.css
