[package]
name = "leptos-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.5.7", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.7", features = ["csr"] }
log = "0.4.20"
